tests/valid/type_safety_ready_gap/deref_shared_borrow.facet
fn main(x: unrestricted isize) -> unrestricted isize {
    (*(&x))
}
