tests/invalid/struct/duplicate_field.facet
struct Pair {
  x: unrestricted isize,
  x: unrestricted bool
}

fn main() -> unrestricted () {
  ()
}
